[package]
name = "pplaces"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.13", features = ["derive"] }
chrono = {version="0.4",features = ["serde"]}
dirs = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[[bin]]
bench = false
path = "src/main.rs"
name = "pplaces"
